changes to build and deploy on digitalocean

--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,9 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  password: password
+  host: db
+  user: postgres
 
 development:
   <<: *default
@@ -82,5 +85,5 @@ test:
 production:
   <<: *default
   database: gobbledygook_production
-  username: gobbledygook
+  username: <%= ENV['GOBBLEDYGOOK_DATABASE_USERNAME'] %>
   password: <%= ENV['GOBBLEDYGOOK_DATABASE_PASSWORD'] %>
