--- a/.dockerignore
+++ b/.dockerignore
@@ -122,6 +122,7 @@ pickle-email-*.html
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+!/tmp/pods/.keep
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 # config/initializers/secret_token.rb
