--- a/docker-compose.server.yml
+++ b/docker-compose.server.yml
@@ -9,18 +9,17 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
   web:
     environment:
       RACK_ENV: production
       RAILS_ENV: production
       GOBBLEDYGOOK_DATABASE_USERNAME: postgres
-      GOBBLEDYGOOK_DATABASE_PASSWORD: replace_me
-      SENDGRID_API_KEY: replace_me
+      GOBBLEDYGOOK_DATABASE_PASSWORD: ${GOBBLEDYGOOK_DATABASE_PASSWORD}
+      SENDGRID_API_KEY: ${SENDGRID_API_KEY}
       RAILS_LOG_TO_STDOUT: 'yes'
       RAILS_SERVE_STATIC_FILES: 'yes'
-    image: bueti/gobbledygook:latest
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    image: bueti/gobbledygook_prod:latest
     ports:
       - "3000:3000"
     depends_on:
