--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,10 @@ services:
     environment:
       POSTGRES_PASSWORD: password
   web:
-    image: bueti/gobbledygook:dev
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    image: bueti/gobbledygook_${BUILD}
+    build:
+      context: .
+      target: app-${BUILD}
     volumes:
       - .:/app
     ports:
