--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,8 @@ jobs:
 
     - name: Build and push App
       uses: docker/build-push-action@v2
+      env:
+        RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
       with:
         push: true
         builder: ${{ steps.buildx.outputs.name }}
